--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^4.1.0",
     "element-ui": "^2.13.0",
     "iview": "^2.11.0",
+    "mockjs": "^1.1.0",
     "qs": "^6.5.1",
     "vue": "^2.5.2",
     "vue-quill-editor": "^3.0.5",
